feat: add color

--- a/packages/styles/color.css
+++ b/packages/styles/color.css
@@ -15,4 +15,10 @@
   --vingle-purple-30: #f5d3ff;
   --vingle-purple-50: #edb0ff;
   --vingle-purple-70: #e07bff;
+  --vingle-positive-500: #00bf40;
+  --vingle-positive-100: #e4ffed;
+  --vingle-caution-500: #ff9200;
+  --vingle-caution-100: #fff426;
+  --vingle-warning-500: #ff2424;
+  --vingle-warning-100: #ffefef;
 }
